# autoware.universe

launch/tier4_perception_launch/: package.xml
launch/tier4_perception_launch/launch/: perception.launch.xml
launch/tier4_perception_launch/launch/road_segmentation/: road_segmentation.launch.xml
perception/autoware_road_segmentation/: CMakeLists.txt  package.xml
perception/autoware_road_segmentation/launch/: road_segementation.launch.xml
perception/autoware_road_segmentation/src/: road_segmentation.cpp  road_segmentation.hpp
perception/autoware_traffic_light_fine_detector/: CMakeLists.txt
perception/autoware_traffic_light_fine_detector/src/: traffic_light_fine_detector_node.cpp
